--- a/public/experiernce.css
+++ b/public/experiernce.css
@@ -1,10 +1,19 @@
 #Exprience {
     width: 100%;
-    height: 900px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     align-items: center; 
     margin-top: 60px;
+    padding-top: 50px;
+}
+#Exprience span{
+    font-family: 'Arial', sans-serif; 
+    font-size: 36px; 
+    color: #27d39f; 
+    font-weight: bold; 
+    text-align: center; 
+    margin-bottom: 20px;
 }
 #direction {
     width: 400px;
@@ -14,27 +23,48 @@
 
 #direction #half {
 	flex: 1;
-    height: 20px;
-    background-color: black;
+    height: 10px;
+    background-color: #d45b5b;
     margin: 0px;
+    border-radius:5px;
+    margin-bottom: 10px;
 }
 
 #direction #half1 {
 	flex: 1;
-    height: 20px;
-    background-color: red;
+    height: 10px;
+    border-radius:5px;
+    background-color: #8437ff;
     margin: 0px;
+    margin-bottom: 10px;
 }
-.clikExprience , .clickEducaiton{
-	width: 500px;
+.clickExperience , .clickEducation{
+    width:800px;
 	height: max-content;
+    /* padding:0 100px; */
 }
 
-.clikExprience {
-	
+.clickExperience {
+    color:white;
 }
-.clickEducaiton{
+.clickEducation{
 	z-index: 1;
 	top: -50px;
+    color:white;
 
+}
+#exprienceText , #educationText{
+    background-color: #cc9a36; 
+    border: none; 
+    color: white; 
+    padding: 15px 32px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
+    font-size: 16px; 
+    margin: 4px 2px;
+    cursor: pointer; 
+    border-radius: 12px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+    transition: background-color 0.3s ease; 
 }
