--- a/public/introduce.css
+++ b/public/introduce.css
@@ -2,13 +2,13 @@
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: space-around;
-}
-#about_img{
-	width: 300px;
-	height: 400px;
-	border-radius: 50%;
+	padding-top: 50px;
+
 }
 #about_text{
 	width: 600px;
 	height: max-content;
+}
+#aliitlebit{
+	margin-top:50px
 }
