--- a/public/navbar.css
+++ b/public/navbar.css
@@ -23,6 +23,7 @@ header {
 .header.change-background {
     background-color: rgba(255, 255, 255, 0.3);   
     backdrop-filter: blur(5px);
+    background-color: #03346E;
 }
 .topnav {
     flex: 1;
